# ats

./: CMakeLists.txt  TODO.md
doc/: lifetime.md
src/: CMakeLists.txt
src/engine/: CMakeLists.txt
src/engine/base/: CMakeLists.txt  atm_gcc_atomic.h  atm_gcc_sync.h  atm_windows.h  atomic.h  ats_type.h  common.h  currency.c  currency.h  datetime.c  datetime.h  hash.c  hash.h  idarray.h  khash.h  logger.h  mem.c  mem.h  mpscq.c  mpscq.h  platform.h  spscq.c  spscq.h  variant.c  variant.h  vec.c
src/engine/core/: CMakeLists.txt  context.c  context.h  event.c  event.h  event_bus.c  event_bus.h  event_def.h  event_dispatch.c  event_dispatch.h  event_queue.c  event_queue.h
test/: CMakeLists.txt
test/benchmark/: benchmark_queue.c
test/framework/: runner.c  task.h
test/unittest/: test-list.h  test_bus_attach.c  test_bus_order.c  test_loop.c  test_pipe_order.c  test_timer_order.c
